# MagicCineTool_SDK

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/MagicCineTool_BSP/: CMakeLists.txt  HiddenPeak_MagicCineTool_BSP.c  HiddenPeak_MagicCineTool_LVGL_port.c
components/MagicCineTool_BSP/include/: HiddenPeak_MagicCineTool_BSP.h  HiddenPeak_MagicCineTool_LVGL_port.h
main/: CMakeLists.txt  idf_component.yml  lvgl_app.c  main.c
main/include/: lvgl_app.h
